<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.activities.MainActivity">

    <ImageView
        android:id="@+id/iv_add"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc_add_city"
        android:onClick="onAddButtonClicked"
        android:src="@drawable/more_city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_more"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/desc_more"
        android:onClick="onMoreOptionClicked"
        android:src="@drawable/ic_more"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/pt_bold"
        android:textColor="@color/light_grey"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_city_name"
        app:layout_constraintStart_toStartOf="@+id/tv_city_name"
        app:layout_constraintTop_toBottomOf="@id/tv_city_name"
        tools:text="30" />

    <TextView
        android:id="@+id/tv_temp_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pt_regular"
        android:text="@string/degree_celsius_symbol"
        android:textColor="@color/light_grey"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tv_temp"
        app:layout_constraintTop_toTopOf="@+id/tv_temp" />

    <TextView
        android:id="@+id/tv_city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/pt_bold"
        android:textColor="@color/light_grey"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/iv_more"
        app:layout_constraintStart_toStartOf="@id/iv_add"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Sylhet" />

    <TextView
        android:id="@+id/tv_weather_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/pt_bold"
        android:textColor="@color/light_grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_temp"
        app:layout_constraintStart_toStartOf="@+id/tv_temp"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp"
        tools:text="Cloudy" />

    <include
        android:id="@+id/include2"
        layout="@layout/layout_additional_weather_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_weather_condition" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btn_forecast"
        app:layout_constraintTop_toBottomOf="@id/include2">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:src="@drawable/img1" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:src="@drawable/img2" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:src="@drawable/img3" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:src="@drawable/img4" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:src="@drawable/img2" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_forecast"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/bg_item"
        android:fontFamily="@font/pt_bold"
        android:onClick="onForecastButtonClicked"
        android:text="@string/btn_label_forecast"
        android:textColor="@color/light_grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>